--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ django = "^4.2"
 djangorestframework = "^3.14.0"
 black = "^23.3.0"
 poetry = "^1.4.2"
+pillow = "^9.5.0"
+django-filter = "^23.2"
 
 
 [build-system]
