--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 sorl-thumbnail = "^12.9.0"
+djoser = "^2.2.0"
+djangorestframework-simplejwt = "^5.2.2"
 
 
 [build-system]
