--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ black = "^23.3.0"
 poetry = "^1.4.2"
 pillow = "^9.5.0"
 django-filter = "^23.2"
+sorl-thumbnail = "^12.9.0"
+djoser = "^2.2.0"
+psycopg2 = "^2.9.6"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
