--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ black = "^23.3.0"
 poetry = "^1.4.2"
 pillow = "^9.5.0"
 django-filter = "^23.2"
+django-shortcuts = "^1.6"
+drf-writable-nested = "^0.7.0"
+psycopg2 = "^2.9.6"
 
 
 [build-system]
