--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ django-shortcuts = "^1.6"
 drf-writable-nested = "^0.7.0"
 psycopg2 = "^2.9.6"
 drf-extra-fields = "^3.4.1"
+isort = "^5.12.0"
 
 
 [build-system]
