--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ flake8-annotations = "^3.0.1"
 flake8-docstrings = "^1.7.0"
 flake8-quotes = "^3.3.2"
 flake8-commas = "^2.1.0"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
