--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,34 @@
-version: '3.3'
+version: '2.15.1'
+
+volumes:
+  db:
+  static_value:
+  media_value:
+  redoc:
+
 services:
+
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - 'db:/var/lib/postgresql/data/'
+    env_file:
+      - .env
+    restart: always
+
+  backend:
+    image: 'yohimbe/foodgram:v1'
+    build: ../backend/
+    restart: always
+    volumes:
+      - 'static_value:/app/static/'
+      - 'media_value:/app/media/'
+      - 'redoc:/app/api/docs/'
+    depends_on:
+      - db
+    env_file:
+      - .env
+
 
   frontend:
     build:
@@ -7,11 +36,20 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+
   nginx:
-    image: nginx:1.19.3
+    image: 'nginx:1.19.3'
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+      - redoc:/usr/share/nginx/html/api/docs/
+    depends_on:
+      - backend
+    restart: always
+
+
+
