--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -71,3 +71,8 @@ virtualenv==20.21.1 ; python_version >= "3.11" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.11" and python_version < "4.0"
 xattr==0.10.1 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "darwin"
 zipp==3.15.0 ; python_version >= "3.11" and python_version < "3.12"
+flake8==6.0.0
+flake8-annotations==3.0.1
+flake8-docstrings==1.7.0
+flake8-quotes==3.3.2
+flake8-commas==2.1.0
