--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -43,13 +43,20 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push to Docker Hub
+      - name: Push to Docker Hub backend
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/backend:v1
           context: backend
           file: backend/Dockerfile
+      - name: Push to Docker Hub frontend
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/frontend:v1
+          context: frontend
+          file: frontend/Dockerfile
   deploy:
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
