--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -85,10 +85,10 @@ jobs:
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           
-          sudo docker-compose up -d
-          sudo docker-compose exec -T backend python manage.py collectstatic --no-input
-          sudo docker-compose exec -T backend python manage.py migrate users
-          sudo docker-compose exec -T backend python manage.py migrate reviews
+          # sudo docker-compose up -d
+          # sudo docker-compose exec -T backend python manage.py collectstatic --no-input
+          # sudo docker-compose exec -T backend python manage.py migrate users
+          # sudo docker-compose exec -T backend python manage.py migrate reviews
 
   send_message:
     runs-on: ubuntu-latest
