--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -28,9 +28,8 @@ services:
 
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: 'yohimbe/frontend:v1'
+    restart: always
     volumes:
       - ../frontend/:/app/result_build/
 
