--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -71,9 +71,12 @@ jobs:
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-          # sudo docker-compose stop backend
-          # sudo docker-compose rm -f backend
+          sudo docker-compose stop backend
+          sudo docker-compose rm -f backend
           sudo docker-compose pull backend
+          
+          sudo docker-compose stop frontend
+          sudo docker-compose rm -f frontend
           sudo docker-compose pull frontend
           rm .env
           touch .env
