--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -89,9 +89,9 @@ jobs:
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           
           sudo docker-compose up -d
-          # sudo docker-compose exec -T backend python manage.py collectstatic --no-input
-          # sudo docker-compose exec -T backend python manage.py migrate users
-          # sudo docker-compose exec -T backend python manage.py migrate reviews
+          sudo docker-compose exec -T backend python manage.py collectstatic --no-input
+          sudo docker-compose exec -T backend python manage.py migrate users
+          sudo docker-compose exec -T backend python manage.py migrate reviews
 
   send_message:
     runs-on: ubuntu-latest
