--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -1,10 +1,14 @@
 name: Django-app workflow
 
-on: [push]
+on:
+  push:
+    branches: [ master ]
+    paths-ignore:
+      - '**/README.md'
 
 jobs:
   tests:
-    name: testing
+    name: pep8 check
     runs-on: ubuntu-latest
 
     steps:
@@ -27,7 +31,6 @@ jobs:
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
-    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     needs: tests
     steps:
@@ -88,10 +91,9 @@ jobs:
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           
-          sudo docker-compose up -d
+          sudo docker-compose up -d -build
           sudo docker-compose exec -T backend python manage.py collectstatic --no-input
-          sudo docker-compose exec -T backend python manage.py migrate users
-          sudo docker-compose exec -T backend python manage.py migrate reviews
+          sudo docker-compose exec -T backend python manage.py migrate
 
   send_message:
     runs-on: ubuntu-latest
