--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python-dotenv = "^1.0.0"
 djoser = "^2.2.0"
 sorl-thumbnail = "^12.9.0"
 gunicorn = "^20.1.0"
+django-cleanup = "^7.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
